Added player instructions as tactics
